--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -20,8 +20,8 @@ jobs:
         echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        # conda env update --file environment.yml --name base
-        conda install -c auto djangorestframework-camel-case
+        conda env update --file environment.yml --name base
+        pip install camelcase
     - name: Lint with flake8
       run: |
         conda install flake8
